<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingTop="16dp"
    android:paddingEnd="24dp"
    android:paddingBottom="0dp">

    <EditText
        android:id="@+id/bookmarkTitleField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bookmark_field_title"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:maxLines="1"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/bookmarkUrlField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/bookmark_field_url"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:maxLines="1"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/bookmarkFolderLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/bookmark_field_folder"
        android:textAppearance="?attr/textAppearanceListItemSecondary" />

    <Spinner
        android:id="@+id/bookmarkFolderSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
